--- a/src/Componants/ManageMedicinePage.css
+++ b/src/Componants/ManageMedicinePage.css
@@ -4,11 +4,12 @@
     background: #ffffff;
     padding: 40px;
     border-radius: 0px;
-    width: 1350px;
+    width: 1400px;
     margin-left: 30px auto;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
     color: #333;
     margin-top: 0px;
+    min-height: 100vh;
   }
   
   .medicine-crud-app h1 {
